syntax = "proto3";

package task;

option java_multiple_files = false;
option java_outer_classname = "TaskMessage";
option java_package = "com.example.grpc";

service TaskService {
  // 空请求体-String 响应
  rpc EmptyRequestToString(Empty) returns (StringResponse) {}
  
  // 空请求体-List<String> 响应
  rpc EmptyRequestToListStringList(Empty) returns (ListStringListResponse) {}
  
  // 空请求体-List<List<String>> 响应
  rpc EmptyRequestToStringList(Empty) returns (StringListResponse) {}
  
  // 空请求体-Map<String, List<Integer>> 响应
  rpc EmptyToMap(Empty) returns (MapResponse) {}
}

message Empty {}

message StringResponse {
  string message = 1;
}

message ListStringListResponse {
  repeated StringListResponse messages = 1;
}

message StringListResponse {
  repeated string messages = 1;
}

message MapResponse {
  map<string, int32> result = 1;
}